# polkadot-cookbook-fork

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/: TUTORIAL_WORKFLOW.md  pull_request_template.md  versions.yml
.github/ISSUE_TEMPLATE/: 01-tutorial-proposal.md  02-custom-blank-issue.md  config.yml  pull_request_template.md  tutorial_proposal.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-a-parachain.yml  build-kitchensink-parachain.yml  ci-test.yml  command-generate-scripts.yml  generate-scripts.yml  generate-zero-to-hero-scripts.yml  zero-to-hero.yml
common-preview-server/: package-lock.json  package.json  server.js
common-preview-server/public/: styles.css
common-scripts/: generate-chain-spec.sh  install-chain-spec-builder.sh  install-omni-node.sh  setup-rust.sh
kitchensink-parachain/: dev_chain_spec.json  zombienet-omni-node.toml  zombienet.toml
scripts/: scaffold-tutorial.sh
scripts/zero-to-hero/: README.md  generate-chain-spec.sh  install-chain-spec-builder.sh  install-omni-node.sh  setup-rust.sh  start-node.sh
tools/create-tutorial/: Cargo.toml  README.md
tools/create-tutorial/src/: bootstrap.rs  git.rs  lib.rs  main.rs  scaffold.rs  validator.rs
tools/create-tutorial/src/templates/: justfile.rs  mod.rs  readme.rs  test.rs  tutorial_yml.rs
tools/create-tutorial/tests/: e2e_test.rs
tutorials/my-tutorial/: README.md  justfile  package-lock.json  package.json  tsconfig.json  (+2 more)
utils/: bootstrap-tests.sh  create-tutorial.js  scaffold-tutorial.sh
zero-to-hero-tutorial/: Cargo.toml
(+32 files in other folders)
