[package]
name = "create-tutorial"
version = "0.1.0"
edition = "2021"
authors = ["Polkadot Cookbook Contributors"]
description = "CLI tool for creating new Polkadot Cookbook tutorials"

[[bin]]
name = "create-tutorial"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
